<resources>

    <string name="app_name">WeiboDemo</string>
	<string name="drawer_open">open</string>
	<string name="drawer_close">close</string>
	<string name="user_fans_name">粉丝</string>
	<string name="user_watch_name">关注</string>
	<string name="user_weibo_name">微博</string>
	
	<string name="user_menu_0">彩信能力</string>
	<string name="user_menu_1">视频能力</string>
	<string name="user_menu_2">搜索</string>
	<string name="user_menu_3">设置</string>
	<string name="user_menu_4">退出</string>
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入</string>
	
</resources>
